tests/compiler/errors/02-type-mismatch-assignment.jsa
// jastat-summary: Error on type mismatch in assignment
// jastat: mode=compiler, capture=stderr

let x: i32 = 42;
let y: bool = x;  // Type error: cannot assign i32 to bool
